# bytepack

./: Cargo.toml  README.md
src/: lib.rs
src/tests/: mod.rs
tests/: test.rs
